RESOLVED FIXED32857
RVCT (__ARMCC_VERSION < 400000) does not provide strcasecmp and strncasecmp
https://bugs.webkit.org/show_bug.cgi?id=32857
Summary RVCT (__ARMCC_VERSION < 400000) does not provide strcasecmp and strncasecmp
Kwang Yul Seo
Reported 2009-12-22 01:02:46 PST
RVCT 4.0 provides strcasecmp and strncasemp as C library extensions, but earlier versions of RVCT do not provide these functions. We can check this from RVCT manual pages: RealView® Compilation Tools Libraries and Floating Point Support Guide Version 4.0 http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.dui0349b/index.html RealView ® CompilationTools Libraries and Floating Point Support Guide Version 3.1 http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.dui0349a/index.html Theses functions needs to be implemented in StringExtras.h and StringExtras.cpp for RVCT < 4.0
Attachments
Add strcasecmp and strncasecmp for RVCT < 4.0 (3.59 KB, patch)
2009-12-22 01:12 PST, Kwang Yul Seo
no flags
Fix the style error. (3.58 KB, patch)
2009-12-22 01:58 PST, Kwang Yul Seo
no flags
Kwang Yul Seo
Comment 1 2009-12-22 01:12:46 PST
Created attachment 45372 [details] Add strcasecmp and strncasecmp for RVCT < 4.0
WebKit Review Bot
Comment 2 2009-12-22 01:17:27 PST
Attachment 45372 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 JavaScriptCore/wtf/StringExtras.cpp:56: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1
Kwang Yul Seo
Comment 3 2009-12-22 01:58:18 PST
Created attachment 45376 [details] Fix the style error.
WebKit Review Bot
Comment 4 2009-12-22 01:58:42 PST
style-queue ran check-webkit-style on attachment 45376 [details] without any errors.
Darin Adler
Comment 5 2009-12-22 10:50:09 PST
Comment on attachment 45376 [details] Fix the style error. This patch is OK, but I'd prefer to see us eliminate strcasecmp and strncasecmp from the code instead. These compare non-ASCII characters without any processing, which is better for our purposes, whereas strcasecmp and strncasecmp may handle non-ASCII characters as letters based on the current POSIX locale setting. It'd be good to provide an ASCII version of strcasecmp and strncasecmp and get rid of the current uses of them.
WebKit Commit Bot
Comment 6 2009-12-22 10:58:41 PST
Comment on attachment 45376 [details] Fix the style error. Clearing flags on attachment: 45376 Committed r52493: <http://trac.webkit.org/changeset/52493>
WebKit Commit Bot
Comment 7 2009-12-22 10:58:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.