2009-12-22  Kwang Yul Seo  <skyul@company100.net>

Reviewed by Darin Adler.

        RVCT (__ARMCC_VERSION < 400000) does not provide strcasecmp and strncasecmp
        https://bugs.webkit.org/show_bug.cgi?id=32857

        Add implementation of strcasecmp and strncasecmp for RVCT < 4.0
        because earlier versions of RVCT 4.0 does not provide these functions.

        * wtf/StringExtras.cpp: Added.
        (strcasecmp):
        (strncasecmp):
        * wtf/StringExtras.h:

Canonical link: https://commits.webkit.org/43906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52493 268f45cc-cd09-0410-ab3c-d52691b4dbfc